--- a/src/css/global.css
+++ b/src/css/global.css
@@ -149,6 +149,10 @@ p{
 
 /*******************Navbar******************/
 
+.turn-off{
+    pointer-events: none;
+}
+
 .css-hip9hq-MuiPaper-root-MuiAppBar-root{
     background-color: #1d1d1d;
     box-shadow: 0px 0px 20px 0px rgb(0 0 0) inset, 0 0 0 0 black;
@@ -360,6 +364,11 @@ p{
 
 /*******************Explanation**********************/
 
+.referral{
+    text-decoration: none;
+    pointer-events: all;
+}
+
 .explanation-heading{
     font-weight: 600;
     margin-top: 2%;
@@ -372,6 +381,11 @@ p{
     font-weight: 600;
     font-size: 19px;
     margin: 1% 2% 2% 0;
+    pointer-events: none;
+}
+
+.selection-explanation-heading{
+    margin: 3% 2% 2% 0;
     pointer-events: none;
 }
 
@@ -688,9 +702,9 @@ pre{
 
 .switch-container{
     display: flex;
-    margin-left: 1em;
-    margin-top: auto;
-    margin-bottom: auto;
+    margin: auto;
+    flex-grow: 1;
+    justify-content: center;
 }
 
 .switch {
@@ -1158,6 +1172,8 @@ input:checked + .switcher:before {
 }
 
 
+/****************Quick Sort Tubes******************/
+
 .pivot-value::before{
     content: "pivot-value";  
     position: relative;
@@ -1178,6 +1194,21 @@ input:checked + .switcher:before {
     --fill-color: blue;
 }
 
+.quick-stay{
+    display: none;
+}
+
+.quick-swap{
+    display: none;
+}
+
+.quick-swap-pivot{
+    display: none;
+}
+
+.start-greater-end{
+    display: none;
+}
 
 /****************************Footer****************************/
 
@@ -1187,7 +1218,7 @@ input:checked + .switcher:before {
     color: ghostwhite;
     background-color: #0f0f0f;
     align-items: center;
-    padding: 1% 2%;
+    padding: 0% 2%;
     margin-top: 4em;
 }
 
@@ -1230,10 +1261,11 @@ width: 75%;
 }
 
 .footer-link-container{
-    height: 100%;
+    height: 80%;
     display: flex;
     flex-direction: column;
-    font-size: .75em;
+    flex-wrap: wrap;
+    font-size: 1em;
     width: 20%;
     text-align: left;
     margin: auto;
