--- a/src/css/global.css
+++ b/src/css/global.css
@@ -201,7 +201,7 @@ p{
     pointer-events: none;
 }
 
-.css-hip9hq-MuiPaper-root-MuiAppBar-root{
+.nav-bar{
     background-color: #1d1d1d;
     box-shadow: 0px 0px 20px 0px rgb(0 0 0) inset, 0 0 0 0 black;
     position: relative;
