--- a/src/css/global.css
+++ b/src/css/global.css
@@ -201,10 +201,10 @@ p{
     pointer-events: none;
 }
 
-.css-1x7skt0{
-    background-color: #1d1d1d;
-    box-shadow: 0px 0px 20px 0px rgb(0 0 0) inset, 0 0 0 0 black;
-    position: relative;
+.nav-bar{
+    background-color: #1d1d1d !important;
+    box-shadow: 0px 0px 20px 0px rgb(0 0 0) inset, 0 0 0 0 black !important;
+    position: relative !important;
 }
 
 .in-nav-container{
