--- a/src/css/global.css
+++ b/src/css/global.css
@@ -141,6 +141,14 @@
     color: dodgerblue;
 }
 
+[data-theme='dark'] .like-it{
+    
+    font-size: 15px;
+    color: white;
+    align-items: center;
+    justify-content: center;
+}
+menu-appbar
 body{
     font-family: 'Barlow', sans-serif;
     margin: 0;
@@ -249,6 +257,10 @@ p{
 }
 
 #menu-appbar{
+    padding: 0;
+}
+
+#other-menu-appbar{
     padding: 0;
 }
 
@@ -519,7 +531,7 @@ p{
 }
 
 .array-index{
-    color: orangered;
+    color: #57309d;
 }
 
 .adjacent-element{
@@ -1347,6 +1359,37 @@ input:checked + .switcher:before {
     margin-bottom: 1em !important;
 }
 
+/****************************Feedback****************************/
+
+.like-it{
+    margin-top: 3.5em;
+    margin-bottom: .5em;
+    display: flex;
+    font-size: 15px;
+    color: black;
+    align-items: center;
+    justify-content: center;
+}
+
+.helpful{
+    margin-right: .5em;
+    font-weight: 600;
+    font-family: 'Barlow';
+    font-size: 23px;
+}
+
+.feedback{
+    border: solid #f06c07;
+    border-radius: 50%;
+    background-color: #f06c07;
+    padding: .5em;
+}
+
+.score{
+    font-size: 21px;
+    margin: 0 .5em;
+}
+
 /****************************Footer****************************/
 
 .footer{
@@ -1356,7 +1399,6 @@ input:checked + .switcher:before {
     background-color: #0f0f0f;
     align-items: center;
     padding: 0% 0% 1em 2%;
-    margin-top: 4em;
 }
 
 .hi{
@@ -1453,6 +1495,4 @@ input:checked + .switcher:before {
     margin-bottom: 10%;
 }
 
-.like-it{
-    margin: .5em;
-}
+
