--- a/src/css/global.css
+++ b/src/css/global.css
@@ -23,6 +23,30 @@
     font-weight: 400;
 }
 
+[data-theme='dark'] .array-index{
+    color: #a67fee;
+}
+
+[data-theme='dark'] .adjacent-element{
+    color: #04c804;
+}
+
+[data-theme='dark'] .sorted-array{
+    color: #04c804;
+}
+
+[data-theme='dark'] .unsorted-array {
+    color: #f37f54;
+}
+
+[data-theme='dark'] .current-explanation{
+    color: #9b9bf9;
+}
+
+[data-theme='dark'] .j-element {
+    color: #f55;
+}
+
 [data-theme='dark'] .thought-bubble {
     background-color: #303134;
     color: ghostwhite;
@@ -543,7 +567,7 @@ p{
 }
 
 .unsorted-array{
-    color: orangered;
+    color: #bc4013;
 }
 
 .current-explanation{
@@ -551,7 +575,7 @@ p{
 }
 
 .j-element{
-    color: red;
+    color: #b30202;
 }
 
 
@@ -1413,7 +1437,7 @@ input:checked + .switcher:before {
     margin: 0;
     margin-left: 2%;
     pointer-events: none;
-    font-size: .9em;
+    font-size: 1em;
 }
 
 .navigate-footer{
@@ -1476,14 +1500,14 @@ input:checked + .switcher:before {
     justify-content: space-around;
     border-left: #fff8ba27 1px solid;
     border-right: #fff8ba27 1px solid;
-    padding: 0 .85em;
+    padding: 2% .85em 0;
 }
 
 
 .copyright-container{
     display: flex;
     align-items: center;
-    font-size: 16px;
+    font-size: .9em;
     margin-top: auto;
     flex-grow: 1;
     width: max-content;
@@ -1496,3 +1520,109 @@ input:checked + .switcher:before {
 }
 
 
+/**********************Media Queries*********************/
+
+/******Extra Small Sevices (landscape phones, 576px and up)******/
+@media (max-width: 575px) {
+/*--------------HOME--------------*/
+    .header-title-1{
+        margin-left: 2% !important;
+    }
+
+    .header-title-2{
+        margin: 2% 0 2% 27% !important;
+    }
+
+    .header-title-3{
+        margin-left: 46% !important;
+    }
+
+    .card{
+        max-width: fit-content;
+    }
+
+/*--------------FOOTER--------------*/
+    .footer{
+        flex-wrap: wrap;
+        padding-top: 2%;
+    }
+
+    .footer span{
+        overflow: visible !important;
+    }
+
+    .ava{
+        margin-left: 15% !important;
+    }
+
+    .my-description{
+        width: 80%;
+        margin: 0 auto;
+        margin-right: 0;
+    }
+
+    .middle-container{
+        border-left: none;
+        border-right: none;
+        border-top: #fff8ba0a 1px solid;
+        margin-top: 4%;
+        padding: 5% 2% 0 2%;
+    }
+
+    .socials{
+        margin-bottom: 5%;
+    }
+
+    .socials a{
+        margin: 5%;
+        transform: scale(1.3);
+    }
+
+    .copyright-container{
+        margin: auto;
+        margin-bottom: 2%;
+    }
+
+    .footer-link-container{
+        width: 35%;
+        bottom: 0px;
+        padding: 0;
+        margin-top: 4%;
+        border-top: #fff8ba0a 1px solid;
+    }
+
+    .footer-link-inner {
+        flex-direction: column;
+        margin: auto;
+    }
+
+    .footer-links span {
+        letter-spacing: 1.5px;
+    }
+
+}
+
+/******SmallDevices(landscape phones, 576px and up)******/
+@media (min-width: 576px) {
+
+}
+
+ /******Medium devices (tablets, 768px and up)******/
+@media (min-width: 768px) {
+
+}
+
+/******Large devices (desktops, 992px and up)******/
+@media (min-width: 992px) {
+
+}
+
+/******X-Large devices (large desktops, 1200px and up)******/
+@media (min-width: 1200px) {
+
+}
+
+/******XX-Large devices (larger desktops, 1400px and up)******/
+@media (min-width: 1400px) {
+
+}
