--- a/src/css/global.css
+++ b/src/css/global.css
@@ -172,7 +172,7 @@
     align-items: center;
     justify-content: center;
 }
-menu-appbar
+
 body{
     font-family: 'Barlow', sans-serif;
     margin: 0;
@@ -401,10 +401,6 @@ p{
     display: flex !important;
     flex-direction: column;
 }
-
-/* .MuiCardActionArea-focusHighlight {
-    background: transparent;
-} */
 
 .card-pic{
     width: fit-content !important;
@@ -1422,7 +1418,7 @@ input:checked + .switcher:before {
     color: ghostwhite;
     background-color: #0f0f0f;
     align-items: center;
-    padding: 0% 0% 1em 2%;
+    padding: 1em 0% 1em 2%;
 }
 
 .hi{
@@ -1522,9 +1518,267 @@ input:checked + .switcher:before {
 
 /**********************Media Queries*********************/
 
-/******Extra Small Sevices (landscape phones, 576px and up)******/
-@media (max-width: 575px) {
-/*--------------HOME--------------*/
+/******XXX-Large devices (larger desktops, 1400px and up)******/
+
+@media (min-width: 1400px) {
+    /*----------HOME----------*/
+    .content-header{
+        font-size: 2em;
+    }
+
+    .content-description{
+        font-size: 1.7em;
+    }
+
+    .complexity-container{
+        font-size: 1.7em;
+    }
+
+    .header-container h1{
+        font-size: 60px;
+    }
+
+    /*----------FOOTER----------*/
+
+    .middle-container{
+        padding: 0% 4% 0;
+        margin-right: 0;
+    }
+
+    .footer-links span {
+        letter-spacing: 1.5px;
+    }
+
+    }
+
+
+/******XX-Large devices (large desktops, 1200px and below)******/
+@media (max-width: 1200px) {
+    .footer-link-container{
+        font-size: .9em;
+    }
+
+    .footer-link-inner {
+        flex-direction: column;
+        margin: auto;
+    }
+
+}
+
+/******X-Large devices (desktops, 1080px and below)******/
+@media (max-width: 992px) {
+
+    .header-container{
+        padding-right: 12%;
+    }
+
+    .header-title-2{
+        margin-top: 2% !important;
+        margin-bottom: 2% !important;
+    }
+
+    .card{
+        max-width: 45%;
+        margin: 1em;
+    }
+
+    .complexity-container{
+        line-height: 1.3em;
+    }
+
+    /*----------FOOTER----------*/
+    .footer{
+        margin-top: 10%;
+        flex-wrap: wrap;
+        padding-top: 2%;
+        justify-content: center;
+    }
+
+    .footer img{
+        margin: 5%;
+        transform: scale(1.3);
+    }
+
+    .footer span{
+        overflow: visible !important;
+    }
+
+    .ava{
+        margin-left: 15% !important;
+    }
+
+    .hi{
+        font-size: 1.2em;
+    }
+
+    .my-description{
+        width: 80%;
+        margin: 0 0 0 7%;
+        font-size: 1.2em;
+    }
+
+    .middle-container{
+        width: 100%;
+        border-left: none;
+        border-right: none;
+        border-top: #fff8ba0a 1px solid;
+        margin-top: 3%;
+    }
+
+    .socials{
+        margin-bottom: 0;
+    }
+
+    .socials a{
+        margin: 3%;
+        transform: scale(1.3);
+    }
+
+    .copyright-container{
+        margin: auto;
+       
+    }
+
+    .footer-link-container{
+        width: 100%;
+        bottom: 0px;
+        padding: 0;
+        margin: 0;
+        margin-top: 2%;
+        border-top: #fff8ba0a 1px solid;
+        font-size: 1.3em;
+    }
+
+    .footer-link-inner {
+        margin: auto 10%;
+        flex-direction: row;
+    }
+
+    .footer-links span {
+        letter-spacing: 1.5px;
+    }
+
+    
+}
+
+/******Medium Devices (landscape phones, 768px and below)******/
+
+@media (max-width: 768px) {
+    /*----------HOME----------*/
+
+    .header-container{
+        padding-left: 6%;
+        padding-right: 0;
+    }
+
+    .header-title-1{
+        margin-left: 6% !important;
+    }
+
+    .header-title-2{
+        margin: 2% 0 2% 29% !important;
+    }
+
+    .header-title-3{
+        margin-left: 50% !important;
+    }
+
+   .card{
+    max-width: fit-content;
+    margin: 2em;
+    }
+
+    .card:hover{
+        position: relative;
+        transform: scale(1.03);
+    }
+    
+
+    .content-description{
+        font-size: 1.8em;
+    }
+
+    .complexity-container{
+        font-size: 1.8em;
+        line-height: 1.4em;
+    }
+}
+
+/******Small Devices (540px and below)******/
+
+@media (max-width: 540px) {
+    /*----------HOME----------*/
+    
+
+    .header-container h1{
+        font-size: 35px;
+        letter-spacing: 4px;
+        line-height: 40px;
+    }
+
+    .card{
+        max-width: fit-content;
+        margin: 1em;
+    }
+
+    .content-description{
+        font-size: 1.5em;
+    }
+
+    .complexity-container{
+        font-size: 1.6em;
+    }
+
+    /*----------FOOTER----------*/
+    .footer{
+        padding-top: 5%;
+    }
+
+    .hi{
+        font-size: 20px;
+    }
+
+    .my-description{
+        width: 100%;
+        margin: 0 auto 0 3%;
+        font-size: 1em;
+    }
+
+     .middle-container{
+        padding: 5% 2% 0 2%;
+    }
+
+    
+
+    .socials a{
+        margin: 5%;
+        transform: scale(1.3);
+    }
+
+    .copyright-container{
+        margin: auto;
+        margin-bottom: 2%;
+    }
+
+    .footer-link-container{
+        font-size: 1em;
+    }
+
+    .ava{
+        margin-left: 0% !important;
+    }
+
+    .socials{
+        margin-bottom: 5%;
+    }
+}
+
+@media (max-width: 420px) {
+    /*----------HOME----------*/
+    .header-container{
+        padding-left: 4%;
+    }
+
     .header-title-1{
         margin-left: 2% !important;
     }
@@ -1536,19 +1790,51 @@ input:checked + .switcher:before {
     .header-title-3{
         margin-left: 46% !important;
     }
+}
 
-    .card{
-        max-width: fit-content;
+/******Extra Small Devices (393px and below)******/
+@media (max-width: 393px) {
+    /*----------HOME----------*/
+    .header-container{
+        padding-left: 1%;
     }
 
-/*--------------FOOTER--------------*/
+    .header-container h1{
+        font-size: 30px;
+        letter-spacing: 3px;
+        line-height: 35px;
+    }
+
+    .header-title-1{
+        margin-left: 10% !important;
+    }
+
+    .header-title-2{
+        margin: 2% 0 2% 30% !important;
+    }
+
+    .header-title-3{
+        margin-left: 47% !important;
+    }
+
+    .complexity-container{
+        font-size: 1.4em;
+    }
+
+    /*----------FOOTER----------*/
     .footer{
         flex-wrap: wrap;
-        padding-top: 2%;
+        padding-top: 1%;
+        margin-top: 10%;
     }
 
     .footer span{
         overflow: visible !important;
+    }
+
+    .footer img{
+        margin: 5%;
+        transform: scale(1);
     }
 
     .ava{
@@ -1558,7 +1844,8 @@ input:checked + .switcher:before {
     .my-description{
         width: 80%;
         margin: 0 auto;
-        margin-right: 0;
+        margin-right: -5px;
+        font-size: .9em;
     }
 
     .middle-container{
@@ -1584,16 +1871,16 @@ input:checked + .switcher:before {
     }
 
     .footer-link-container{
-        width: 35%;
+        width: 100%;
         bottom: 0px;
         padding: 0;
+        margin: 0;
         margin-top: 4%;
         border-top: #fff8ba0a 1px solid;
     }
 
     .footer-link-inner {
-        flex-direction: column;
-        margin: auto;
+        margin: auto 10%;
     }
 
     .footer-links span {
@@ -1602,27 +1889,39 @@ input:checked + .switcher:before {
 
 }
 
-/******SmallDevices(landscape phones, 576px and up)******/
-@media (min-width: 576px) {
+@media (max-width: 300px) {
 
-}
+    .header-title-1.tiny{
+        margin-left: 0% !important;
+    }
 
- /******Medium devices (tablets, 768px and up)******/
-@media (min-width: 768px) {
+    .header-title-2.tiny{
+        margin: 2% 0 2% 25% !important;
+    }
 
-}
+    .header-title-3.tiny{
+        margin-left: 42% !important;
+    }
 
-/******Large devices (desktops, 992px and up)******/
-@media (min-width: 992px) {
+    .my-description {
+        width: 100% !important;
+    }
 
-}
+    .footer{
+        justify-content: center;
+        padding-top: 3%;
+    }
 
-/******X-Large devices (large desktops, 1200px and up)******/
-@media (min-width: 1200px) {
+    .ava{
+        margin-left: 0% !important;
+    }
 
-}
+    .footer-link-inner{
+        margin: 0;
+    }
 
-/******XX-Large devices (larger desktops, 1400px and up)******/
-@media (min-width: 1400px) {
-
+    .footer-link-container{
+        font-size: .8em;
+    }
+    
 }
