--- a/src/css/global.css
+++ b/src/css/global.css
@@ -248,8 +248,8 @@ p{
 
 .in-nav-container span{
     cursor: pointer;
-    margin-right: 1em;
-    margin-top: auto;
+    margin: auto .5em;
+    font-size: 20px;
 }
 
 .home-link{
@@ -312,6 +312,8 @@ p{
 .about-me-p{
     font-size: 20px;
     color: #f06c07;
+    padding-bottom: 1px;
+    margin-left: .3em;
 }
 
 .nav-copyright-container{
@@ -394,7 +396,7 @@ p{
 
 .card:hover{
     position: relative;
-    transform: scale(1.1);
+    transform: scale(1.06);
 }
 
 .card-action-area{
@@ -812,9 +814,9 @@ pre{
     border: white solid 1px !important;
 }
 
-/*********************Switch********************/
+/* ********************Switch******************* */
 
-.switch-container{
+/* .switch-container{
     display: flex;
     margin: auto;
     flex-grow: 1;
@@ -828,10 +830,10 @@ pre{
     height: 1.2em;
     top: .3em;
     margin: 0 5px;
-}
+} */
   
   /* Hide default HTML checkbox */
-.switch input {
+/* .switch input {
     opacity: 0;
     width: 0;
     height: 0;
@@ -877,7 +879,7 @@ input:checked + .switcher:before {
     -ms-transform: translateX(26px);
     transform: translateX(26px);
 }
-
+ */
 
 /*********************Tubes********************/
 
@@ -1418,6 +1420,7 @@ input:checked + .switcher:before {
     color: ghostwhite;
     background-color: #0f0f0f;
     align-items: center;
+    margin-top: 2%;
     padding: 1em 0% 1em 2%;
 }
 
@@ -1519,7 +1522,6 @@ input:checked + .switcher:before {
 /**********************Media Queries*********************/
 
 /******XXX-Large devices (larger desktops, 1400px and up)******/
-
 @media (min-width: 1400px) {
     /*----------HOME----------*/
     .content-header{
@@ -1538,8 +1540,12 @@ input:checked + .switcher:before {
         font-size: 60px;
     }
 
-    /*----------FOOTER----------*/
+    /*----------TUBES----------*/
+    #finished2{
+        left: 0%;
+    }
 
+    /*----------FOOTER----------*/
     .middle-container{
         padding: 0% 4% 0;
         margin-right: 0;
@@ -1548,12 +1554,56 @@ input:checked + .switcher:before {
     .footer-links span {
         letter-spacing: 1.5px;
     }
+}
 
+@media (max-width: 1399px) {
+    /*----------TUBES----------*/
+    #finished2{
+        left: -15%;
     }
-
+}
 
 /******XX-Large devices (large desktops, 1200px and below)******/
 @media (max-width: 1200px) {
+    /*----------NAVBAR----------*/
+    .in-nav-container span{
+        font-size: 19px;
+        margin: auto 0.4em;
+    }
+
+    .about-me-p{
+        font-size: 18px;
+    }
+
+    .top-container{
+        flex-direction: column;
+    }
+
+    .bottom-container{
+        padding: 0 1%;
+    }
+
+    .explanation{
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .method{
+        width: 60%;
+        margin: 2% auto;
+    }
+
+    .side-display{
+        margin-left: 1em;
+    }
+
+    /*----------TUBES----------*/
+    #finished2{
+        left: -30%;
+    }
+
+    /*----------FOOTER----------*/
     .footer-link-container{
         font-size: .9em;
     }
@@ -1562,12 +1612,11 @@ input:checked + .switcher:before {
         flex-direction: column;
         margin: auto;
     }
-
 }
 
-/******X-Large devices (desktops, 1080px and below)******/
+/******X-Large devices (desktops, 992px and below)******/
 @media (max-width: 992px) {
-
+    /*----------HOME----------*/
     .header-container{
         padding-right: 12%;
     }
@@ -1586,9 +1635,36 @@ input:checked + .switcher:before {
         line-height: 1.3em;
     }
 
+    .content-description {
+        font-size: 1.75em;
+    }
+
+     /*---------NAVBAR----------*/
+     .in-nav-container span{
+        font-size: 16px;
+    }
+
+    .about-me-p{
+        font-size: 16px;
+    }
+
+    .bottom-container{
+        flex-direction: column;
+    }
+
+    .side-display{
+        width: 40%;
+        margin: 0 auto;
+    }
+
+    /*----------TUBES----------*/
+    #finished2{
+        left: -60%;
+    }
+
     /*----------FOOTER----------*/
     .footer{
-        margin-top: 10%;
+        margin-top: 1%;
         flex-wrap: wrap;
         padding-top: 2%;
         justify-content: center;
@@ -1618,7 +1694,7 @@ input:checked + .switcher:before {
     }
 
     .middle-container{
-        width: 100%;
+        width: 40%;
         border-left: none;
         border-right: none;
         border-top: #fff8ba0a 1px solid;
@@ -1626,7 +1702,7 @@ input:checked + .switcher:before {
     }
 
     .socials{
-        margin-bottom: 0;
+        margin-bottom: 5%;
     }
 
     .socials a{
@@ -1640,13 +1716,13 @@ input:checked + .switcher:before {
     }
 
     .footer-link-container{
-        width: 100%;
+        width: 50%;
         bottom: 0px;
         padding: 0;
         margin: 0;
         margin-top: 2%;
         border-top: #fff8ba0a 1px solid;
-        font-size: 1.3em;
+        font-size: 1.1em;
     }
 
     .footer-link-inner {
@@ -1656,16 +1732,12 @@ input:checked + .switcher:before {
 
     .footer-links span {
         letter-spacing: 1.5px;
-    }
-
-    
+    } 
 }
 
 /******Medium Devices (landscape phones, 768px and below)******/
-
 @media (max-width: 768px) {
     /*----------HOME----------*/
-
     .header-container{
         padding-left: 6%;
         padding-right: 0;
@@ -1683,7 +1755,7 @@ input:checked + .switcher:before {
         margin-left: 50% !important;
     }
 
-   .card{
+    .card{
     max-width: fit-content;
     margin: 2em;
     }
@@ -1693,7 +1765,6 @@ input:checked + .switcher:before {
         transform: scale(1.03);
     }
     
-
     .content-description{
         font-size: 1.8em;
     }
@@ -1702,14 +1773,33 @@ input:checked + .switcher:before {
         font-size: 1.8em;
         line-height: 1.4em;
     }
+
+    /*----------TUBES----------*/
+    #finished2{
+        left: -90%;
+    }
+
+    /*----------FOOTER----------*/
+    .middle-container{
+        flex-grow: 1;
+    }
+
+    .socials{
+        margin: .6em 0;
+    }
+
+    .footer-link-inner{
+        margin: auto 5%;
+    }
+
+    .footer-links span{
+        letter-spacing: normal;
+    }
 }
 
-/******Small Devices (540px and below)******/
-
-@media (max-width: 540px) {
+/******Small Devices (600px and below)******/
+@media (max-width: 600px) {
     /*----------HOME----------*/
-    
-
     .header-container h1{
         font-size: 35px;
         letter-spacing: 4px;
@@ -1717,7 +1807,6 @@ input:checked + .switcher:before {
     }
 
     .card{
-        max-width: fit-content;
         margin: 1em;
     }
 
@@ -1727,6 +1816,27 @@ input:checked + .switcher:before {
 
     .complexity-container{
         font-size: 1.6em;
+    }
+
+    .top-container{
+        margin: 0;
+    }
+
+    .method{
+        width: 99%;
+    }
+
+    .side-display{
+        width: 90%;
+    }
+
+    .row{
+        height: 10em;
+        margin-top: 3.5%;
+    }
+
+    .like-it{
+        margin-top: .5em;
     }
 
     /*----------FOOTER----------*/
@@ -1744,24 +1854,25 @@ input:checked + .switcher:before {
         font-size: 1em;
     }
 
-     .middle-container{
-        padding: 5% 2% 0 2%;
+    .middle-container{
+        width: 100%;
+        padding: 0 2% 0;
     }
-
-    
 
     .socials a{
         margin: 5%;
-        transform: scale(1.3);
     }
 
     .copyright-container{
-        margin: auto;
+        margin: 0 auto;
         margin-bottom: 2%;
+        font-size: 1em;
     }
 
     .footer-link-container{
-        font-size: 1em;
+        width: 100%;
+        font-size: 1.2em;
+        margin: 2% 10%;
     }
 
     .ava{
@@ -1769,7 +1880,14 @@ input:checked + .switcher:before {
     }
 
     .socials{
-        margin-bottom: 5%;
+        margin-bottom: 2%;
+    }
+}
+
+@media (max-width: 490px) {
+    .about-me-p{
+        margin-left: 0;
+        font-size: 14px;
     }
 }
 
@@ -1823,9 +1941,7 @@ input:checked + .switcher:before {
 
     /*----------FOOTER----------*/
     .footer{
-        flex-wrap: wrap;
         padding-top: 1%;
-        margin-top: 10%;
     }
 
     .footer span{
@@ -1843,26 +1959,17 @@ input:checked + .switcher:before {
 
     .my-description{
         width: 80%;
-        margin: 0 auto;
+        margin: 0 auto 0 5%;
         margin-right: -5px;
-        font-size: .9em;
     }
 
     .middle-container{
-        border-left: none;
-        border-right: none;
-        border-top: #fff8ba0a 1px solid;
         margin-top: 4%;
         padding: 5% 2% 0 2%;
     }
 
     .socials{
-        margin-bottom: 5%;
-    }
-
-    .socials a{
-        margin: 5%;
-        transform: scale(1.3);
+        margin: 0;
     }
 
     .copyright-container{
@@ -1871,26 +1978,24 @@ input:checked + .switcher:before {
     }
 
     .footer-link-container{
-        width: 100%;
-        bottom: 0px;
-        padding: 0;
         margin: 0;
         margin-top: 4%;
-        border-top: #fff8ba0a 1px solid;
     }
 
     .footer-link-inner {
         margin: auto 10%;
+        flex-direction: column;
+        margin: auto;
+        font-size: .9em;
     }
 
     .footer-links span {
         letter-spacing: 1.5px;
     }
-
 }
 
 @media (max-width: 300px) {
-
+    /*----------HOME----------*/
     .header-title-1.tiny{
         margin-left: 0% !important;
     }
@@ -1903,10 +2008,15 @@ input:checked + .switcher:before {
         margin-left: 42% !important;
     }
 
-    .my-description {
-        width: 100% !important;
+    .complexity-container {
+        font-size: 1em;
     }
 
+    .my-description {
+        width: 100% !important;
+
+    }
+    /*----------FOOTER----------*/
     .footer{
         justify-content: center;
         padding-top: 3%;
@@ -1915,13 +2025,4 @@ input:checked + .switcher:before {
     .ava{
         margin-left: 0% !important;
     }
-
-    .footer-link-inner{
-        margin: 0;
-    }
-
-    .footer-link-container{
-        font-size: .8em;
-    }
-    
 }
