--- a/src/css/global.css
+++ b/src/css/global.css
@@ -467,7 +467,7 @@ p{
 .explanation-heading{
     font-weight: 600;
     margin-top: 2%;
-    margin-bottom: 1%;
+    margin-bottom: 2%;
     pointer-events: none;
     letter-spacing: .5px;
 }
@@ -490,8 +490,9 @@ p{
 }
 
 .explanation {
-	font-size: 1.3em;
+	font-size: 1.25em;
     width: 60%;
+    margin-top: 2%;
 }
 
 .explanation-list{
@@ -499,6 +500,8 @@ p{
     margin: .5rem 0 0 0;
     padding-inline-start: 0px;
     pointer-events: none;
+    width: fit-content;
+    margin: auto;
   }
 
 .explanation-list li{
@@ -579,15 +582,54 @@ p{
 
 /*********************Method********************/
 
+/*     --background: white;
+    --foreground: black;
+    color-scheme: light;
+    font-size: 1.3em !important;
+    padding: .5em 1em !important;
+    text-align: left;
+    white-space: pre;
+    word-spacing: normal;
+    word-break: normal;
+    overflow-wrap: normal;
+    color: rgb(238, 238, 238);
+    background: rgb(47, 47, 47);
+    font-family: "Roboto Mono", monospace;
+    line-height: 1.5em;
+    tab-size: 4;
+    hyphens: none;
+    overflow: auto;
+    position: relative;
+    margin: 0.5em 0px;
+     */
+
 .method{    
     margin-top: auto;
     margin-bottom: auto;
 }
 
 pre{
+    width: fit-content;
     font-family: monospace !important;
-    font-size: 1.3em !important;
+    font-size: 1em !important;
     padding: .5em 1em !important;
+    background-color: rgb(47, 47, 47);
+}
+
+pre span{
+    color: rgb(255, 255, 255);
+}
+
+.keyword{
+    color: #ffeb3b;
+}
+
+.boolean{
+    color: #c780f7;
+}
+
+.punctuation{
+    color: #fb842a;
 }
 
 
@@ -1540,10 +1582,19 @@ input:checked + .switcher:before {
         font-size: 60px;
     }
 
-    /*----------TUBES----------*/
+    /*---------BOTTOM CONTAINER--------*/
+    .bottom-container{
+        margin-top: 2%;
+    }
+
     #finished2{
         left: 0%;
     }
+
+    .thought-bubble {
+        left: 63%;
+    }
+    
 
     /*----------FOOTER----------*/
     .middle-container{
@@ -1556,10 +1607,24 @@ input:checked + .switcher:before {
     }
 }
 
+/******XX-Large devices (large desktops, 1399px and below)******/
 @media (max-width: 1399px) {
-    /*----------TUBES----------*/
+    /*---------TOP CONTAINER--------*/
+    .explanation {
+        font-size: 1.05em;
+    }
+
+    pre{
+        font-size: 1em !important;
+    }
+
+    /*-------BOTTOM CONTAINER-------*/
     #finished2{
         left: -15%;
+    }
+
+    .thought-bubble {
+        left: 57%;
     }
 }
 
@@ -1575,32 +1640,40 @@ input:checked + .switcher:before {
         font-size: 18px;
     }
 
-    .top-container{
-        flex-direction: column;
+     /*----------TOP CONTAINER----------*/
+    pre {
+        font-size: .8em !important;
     }
 
+    .explanation {
+        font-size: 1em;
+    }
+
+    /*---------BOTTOM CONTAINER--------*/
     .bottom-container{
-        padding: 0 1%;
-    }
-
-    .explanation{
-        width: 90%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .method{
-        width: 60%;
-        margin: 2% auto;
+        padding: 0;
+        margin-top: 3%;
     }
 
     .side-display{
         margin-left: 1em;
+        padding-left: 1em;
     }
 
-    /*----------TUBES----------*/
+    .cap{
+        font-size: larger;
+    }
+
+    .thought-bubble {
+        left: 48%;
+    }
+
     #finished2{
         left: -30%;
+    }
+
+    .like-it{
+        margin-top: 3em;
     }
 
     /*----------FOOTER----------*/
@@ -1611,6 +1684,29 @@ input:checked + .switcher:before {
     .footer-link-inner {
         flex-direction: column;
         margin: auto;
+    }
+}
+
+/******X-Large devices ( 1079px and below)******/
+@media (max-width: 1079px) {
+    /*----------TOP CONTAINER----------*/
+    .top-container{
+        flex-direction: column;
+    }
+
+    .explanation{
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 1.35em;
+    }
+
+    .method{
+        margin: 2% auto;
+    }
+
+    pre{
+        font-size: 1.1em !important;
     }
 }
 
@@ -1648,16 +1744,42 @@ input:checked + .switcher:before {
         font-size: 16px;
     }
 
+    /*----------TOP CONTAINER----------*/
+    .explanation{
+        width: 95%;
+        font-size: 1.25em;
+    }
+
+    pre{
+        font-size: 1em !important;
+    }
+
+    /*--------BOTTOM CONTAINER---------*/
     .bottom-container{
-        flex-direction: column;
+        margin-top: 0;
+        justify-content: space-evenly;
     }
 
     .side-display{
-        width: 40%;
-        margin: 0 auto;
+        margin: auto;
+        transform: scale(.7);
+    }
+
+    .row{
+        height: 17em;
+        padding-right: 2em;
+        /* transform: scale(.8); */
+    }
+
+    .tube{
+        width: 90%;
     }
 
     /*----------TUBES----------*/
+    .thought-bubble {
+        left: 35%;
+    }
+
     #finished2{
         left: -60%;
     }
@@ -1670,11 +1792,6 @@ input:checked + .switcher:before {
         justify-content: center;
     }
 
-    .footer img{
-        margin: 5%;
-        transform: scale(1.3);
-    }
-
     .footer span{
         overflow: visible !important;
     }
@@ -1683,14 +1800,10 @@ input:checked + .switcher:before {
         margin-left: 15% !important;
     }
 
-    .hi{
-        font-size: 1.2em;
-    }
-
     .my-description{
         width: 80%;
         margin: 0 0 0 7%;
-        font-size: 1.2em;
+        font-size: .8em;
     }
 
     .middle-container{
@@ -1705,14 +1818,10 @@ input:checked + .switcher:before {
         margin-bottom: 5%;
     }
 
-    .socials a{
-        margin: 3%;
-        transform: scale(1.3);
-    }
 
     .copyright-container{
         margin: auto;
-       
+       font-size: .7em;
     }
 
     .footer-link-container{
@@ -1722,7 +1831,7 @@ input:checked + .switcher:before {
         margin: 0;
         margin-top: 2%;
         border-top: #fff8ba0a 1px solid;
-        font-size: 1.1em;
+        font-size: .8em;
     }
 
     .footer-link-inner {
@@ -1733,6 +1842,38 @@ input:checked + .switcher:before {
     .footer-links span {
         letter-spacing: 1.5px;
     } 
+}
+
+/******(840px and below)******/
+@media (max-width: 840px) {
+    /*----------TOP CONTAINER----------*/
+    .explanation{
+        font-size: 1.15em;
+    }
+
+    /*----------TUBES----------*/
+    .row{
+        height: 15em;
+        padding-right: 1.5em;
+    }
+    
+    .cap{
+        font-size: large;
+    }
+
+    .thought-bubble{
+        left: 25%;
+        font-size: 1em;
+    }
+
+    .greater{
+        font-size: 1em;
+    }
+
+    .less{
+        font-size: 1em;
+    }
+
 }
 
 /******Medium Devices (landscape phones, 768px and below)******/
@@ -1774,9 +1915,80 @@ input:checked + .switcher:before {
         line-height: 1.4em;
     }
 
+     /*----------TOP CONTAINER----------*/
+     .explanation{
+        font-size: 1.1em;
+    }
+
+    /*--------BOTTOM CONTAINER---------*/
     /*----------TUBES----------*/
     #finished2{
         left: -90%;
+    }
+
+    .bottom-container{
+        flex-direction: column-reverse;
+        margin-top: 0;
+    }
+
+    .side-display{
+        width: 50%;
+        margin: 4% auto 0;
+        transform: none;
+    }
+
+    #sort-button{
+        font-size: .9em;
+    }
+
+    .refresh-button {
+        padding: 0.65em 0.75em;
+    }
+
+    .slider-label{
+        font-size: 1em;
+    }
+
+    .MuiSlider-markLabel {
+        left: 3.6em !important;
+        font-size: .8em !important;
+    }
+
+    .MuiSlider-markLabelActive {
+        left: 3.6em !important;
+        font-size: .8em !important;
+    }
+
+    .var-container{
+        font-size: 1em;
+    }
+
+    .row{
+        transform: none;
+        padding: 0 15px;
+        gap: 1.5em;
+    }
+
+    .tube{
+        width: 100%;
+    }
+
+    .thought-bubble{
+        left: 45%;
+        font-size: 1em;
+    }
+
+    .greater{
+        font-size: 1em;
+    }
+
+    .less{
+        font-size: 1em;
+    }
+
+    /*----------TUBES----------*/
+    #finished2{
+        left: -60%;
     }
 
     /*----------FOOTER----------*/
@@ -1818,25 +2030,45 @@ input:checked + .switcher:before {
         font-size: 1.6em;
     }
 
+    /*----------TOP CONTAINER----------*/
+    .explanation{
+        font-size: 1em;
+    }
+    
+    pre{
+        font-size: .9em !important;
+    }
+    
+    /*--------BOTTOM CONTAINER---------*/
     .top-container{
         margin: 0;
     }
 
-    .method{
-        width: 99%;
-    }
-
     .side-display{
-        width: 90%;
+        width: 60%;
     }
 
     .row{
-        height: 10em;
+        height: 14em;
         margin-top: 3.5%;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .tube{
+        width: 100%;
+    }
+
+    .thought-bubble{
+        left: 32%;
     }
 
     .like-it{
-        margin-top: .5em;
+        margin-top: 2em;
+    }
+
+    .helpful{
+        font-size: 21px;
     }
 
     /*----------FOOTER----------*/
@@ -1844,14 +2076,10 @@ input:checked + .switcher:before {
         padding-top: 5%;
     }
 
-    .hi{
-        font-size: 20px;
-    }
-
     .my-description{
         width: 100%;
         margin: 0 auto 0 3%;
-        font-size: 1em;
+        font-size: .9em;
     }
 
     .middle-container{
@@ -1866,12 +2094,12 @@ input:checked + .switcher:before {
     .copyright-container{
         margin: 0 auto;
         margin-bottom: 2%;
-        font-size: 1em;
+        font-size: .9em;
     }
 
     .footer-link-container{
         width: 100%;
-        font-size: 1.2em;
+        font-size: 1em;
         margin: 2% 10%;
     }
 
@@ -1885,9 +2113,29 @@ input:checked + .switcher:before {
 }
 
 @media (max-width: 490px) {
+    /*--------NAVBAR----------*/
     .about-me-p{
         margin-left: 0;
         font-size: 14px;
+    }
+
+    /*----------TOP CONTAINER----------*/
+    pre{
+        font-size: .7em !important;
+    }
+    
+    /*--------BOTTOM CONTAINER---------*/
+    .side-display{
+        width: 70%;
+    }
+
+    .row{
+        height: 12em;
+    }
+
+    .thought-bubble{
+        font-size: .8em;
+        left: 25%;
     }
 }
 
@@ -1907,6 +2155,14 @@ input:checked + .switcher:before {
 
     .header-title-3{
         margin-left: 46% !important;
+    }
+
+    .thought-bubble{
+        left: 15%;
+    }
+
+    #finished2{
+        font-size: 1em;
     }
 }
 
@@ -1937,6 +2193,26 @@ input:checked + .switcher:before {
 
     .complexity-container{
         font-size: 1.4em;
+    }
+
+    /*----------TOP CONTAINER----------*/
+    pre{
+        font-size: .6em !important;
+    }
+    
+    /*--------BOTTOM CONTAINER---------*/
+    .side-display{
+        width: 90%;
+    }
+
+    .row{
+        height: 10em;
+        gap: .5em;
+    }
+
+    .thought-bubble{
+        font-size: .65em;
+        left: 5%;
     }
 
     /*----------FOOTER----------*/
@@ -2015,6 +2291,23 @@ input:checked + .switcher:before {
     .my-description {
         width: 100% !important;
 
+    }
+
+    /*----------TOP CONTAINER----------*/
+    pre{
+        font-size: .5em !important;
+    }
+    
+    /*--------BOTTOM CONTAINER---------*/    
+    .var-container{
+        font-size: .85em;
+        padding-top: 1em;
+    }
+
+    .thought-bubble{
+        padding-left: 2em;
+        padding-right: 2em;
+        left: .5em;
     }
     /*----------FOOTER----------*/
     .footer{
